src/objects/Tracking_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tracking Details</relationshipLabel>
        <relationshipName>Tracking_Details</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clicked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clicked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tracking_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clicked_Time__c</fullName>
        <label>Clicked Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Clicked_Url__c</fullName>
        <label>Clicked Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Logged_In_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logged In User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Tracking_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Login_Time__c</fullName>
        <label>Login Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Visited</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Downloaded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Tracking Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TD-{0000}</displayFormat>
        <label>Tracking Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking Details</pluralLabel>
    <recordTypes>
        <fullName>Login</fullName>
        <active>true</active>
        <label>Login</label>
    </recordTypes>
    <recordTypes>
        <fullName>Purpose</fullName>
        <active>true</active>
        <label>Purpose</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>